# neon-class-macros

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  package.json
.cargo/: config.toml
.github/workflows/: commit-checks.yaml  rust.yml
derived_class/src/: lib.rs
docs/: method_macro.md  to_js_obj.md
docs/node_tests/src/: derived_class.rs  lib.rs
node_tests/: Cargo.toml  derivedClass.test.js  package.json
node_tests/src/: derived_class.rs  lib.rs
node_tests/src/errors/: mod.rs  multiple_ctor_error.rs  multiple_ctor_error.stderr  rename_macro_error.rs  rename_macro_error.stderr
node_tests/tests/: macro_tests.rs
scripts/: prepareDocs.js
src/: lib.rs  utils.rs
tests/: basic.rs  macro-tests.rs  run-all-tests.rs  utils.rs
