[package]
name = "neon_macros"
version = "0.1.0"
description = "Macros for convenieniently expressing JS Classes with Neon apis"
keywords = ["template", "proc_macro", "procmacro", "Neon", "N-API", "nodejs"]
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
neon-serde = { git = "https://github.com/NZXTCorp/neon-serde.git", branch = "refactor/update-neon-0.10" }
proc-macro2 = "1.0"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }

[dependencies.neon]
version = "0.10.0-alpha.2"
default-features = false
features = ["napi-6", "channel-api", "promise-api"]

[dev-dependencies]
trybuild = "1.0"

[workspace]
members = [
    "node_tests"
]
