[package]
name = "neon_class_macros"
version = "0.1.0"
description = "Macros for convenieniently expressing JS Classes with Neon apis"
keywords = ["template", "proc_macro", "procmacro", "Neon", "N-API", "nodejs", "class", "classes", "javascript"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jose-acevedoflores/neon-class-macros"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
neon-serde = { git = "https://github.com/NZXTCorp/neon-serde.git", branch = "refactor/update-neon-0.10" }
proc-macro2 = "1.0"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }

[dependencies.neon]
version = "0.10.0-alpha.2"
default-features = false
features = ["napi-6"]

[features]
# NOTE: the channel and promise api features are only needed when compiling the tests so enable them when running the tests
for-tests = ["neon/channel-api", "neon/promise-api"]

[workspace]
members = [
    "node_tests"
]
