[package]
name = "derived_class"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon_macros = { path = "../" }
neon-serde = { git = "https://github.com/NZXTCorp/neon-serde.git", branch = "refactor/update-neon-0.10" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.neon]
version = "0.10.0-alpha.2"
default-features = false
features = ["napi-6", "channel-api", "promise-api"]
