[package]
name = "derived_class"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon-serde = { git = "https://github.com/NZXTCorp/neon-serde.git", branch = "refactor/update-neon-0.10" }
neon_macros = { path = "../" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.neon]
version = "0.10.0-alpha.2"
default-features = false
features = ["napi-6", "channel-api", "promise-api"]
